// Vitest Snapshot v1

exports[`Collapse > Collapse accordionVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          单元测试
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-up"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          单元测试
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          单元测试
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          单元测试
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  
  
</div>
`;

exports[`Collapse > Collapse actionVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          收起
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-up"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`Collapse > Collapse baseVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <!---->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`Collapse > Collapse cardVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--card"
>
  
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <!---->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-up"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <!---->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <!---->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <!---->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-down"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
      <div
        class="content"
      >
         此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
      </div>
      
    </div>
  </div>
  
  
</div>
`;

exports[`Collapse > Collapse mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Collapse 折叠面板
  </h1>
  <p
    class="summary"
  >
    用于对复杂区域进行分组和隐藏 常用于订单信息展示等
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础折叠面板
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <!---->
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        向上展开
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        <div
          class="t-collapse-panel t-collapse-panel--top"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--top"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <!---->
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-up"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容 
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作说明
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                收起
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-up"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        手风琴式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                单元测试
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-up"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                单元测试
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                单元测试
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                单元测试
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        卡片折叠面板
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--card"
      >
        
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <!---->
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-up"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <!---->
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <!---->
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
        >
          <div
            class="t-collapse-panel__title"
          >
            <div
              class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--bottom"
            >
              <div
                class="t-cell__left"
              >
                <div
                  class="t-cell__left-icon"
                >
                  
                  <!---->
                  
                </div>
                <!---->
              </div>
              <div
                class="t-cell__title"
              >
                
                折叠面板标题
                
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <!---->
                
              </div>
              <div
                class="t-cell__right"
              >
                <div
                  class="t-cell__right-icon"
                >
                  
                  <div
                    class="t-collapse-panel__header-icon"
                  >
                    <svg
                      class="t-icon t-icon-chevron-down"
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M17.5 8.09l-5.5 5.5-5.5-5.5L5.09 9.5 12 16.41l6.91-6.91-1.41-1.41z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__content"
          >
            
            <div
              class="content"
            >
               此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
            </div>
            
          </div>
        </div>
        
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Collapse > Collapse placementVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  <div
    class="t-collapse-panel t-collapse-panel--top"
  >
    <div
      class="t-collapse-panel__title"
    >
      <div
        class="t-cell t-cell--middle t-collapse-panel__header t-collapse-panel__header--top"
      >
        <div
          class="t-cell__left"
        >
          <div
            class="t-cell__left-icon"
          >
            
            <!---->
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          
          折叠面板标题
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <!---->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            <div
              class="t-collapse-panel__header-icon"
            >
              <svg
                class="t-icon t-icon-chevron-up"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.5 15.91l-5.5-5.5-5.5 5.5-1.41-1.41L12 7.59l6.91 6.91-1.41 1.41z"
                  fill="currentColor"
                />
              </svg>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__content"
    >
      
       此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容 
      
    </div>
  </div>
  
</div>
`;
